--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "eslint-config-react-app": "^4.0.1",
     "eslint-loader": "2.1.2",
     "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "^1.5.0",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
@@ -46,6 +44,13 @@
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^7.1.0",
+    "react-router": "^5.0.1",
+    "react-router-config": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
@@ -60,8 +65,24 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "debug": "cross-env NODE_ENV=development nodemon ./server/app.js",
+    "debug:dev": "cross-env cross-env REACT_APP_ENV=dev npm run debug",
+    "debug:test": "cross-env cross-env REACT_APP_ENV=test npm run debug",
+    "debug:move": "cross-env cross-env REACT_APP_ENV=move npm run debug",
+    "clear": "rimraf build",
+    "build:client": "cross-env NODE_ENV=production webpack --progress --hide-modules --config config/webpack.client.config.js",
+    "build:server": "cross-env NODE_ENV=production webpack --progress --hide-modules --config config/webpack.server.config.js",
+    "build": "npm run build:client && npm run build:server",
+    "build:dev": "npm run clear && cross-env NODE_ENV=production& cross-env REACT_APP_ENV=dev npm run build",
+    "build:test": "npm run clear && cross-env NODE_ENV=production& cross-env REACT_APP_ENV=test npm run build",
+    "build:move": "npm run clear && cross-env NODE_ENV=production& cross-env REACT_APP_ENV=move npm run build",
+    "build:prod": "npm run clear && cross-env NODE_ENV=production& cross-env REACT_APP_ENV=prod npm run build",
+    "server:dev": "pm2 startOrReload ecosystem.config.js --env dev",
+    "server:test": "pm2 startOrReload ecosystem.config.js --env test",
+    "server:move": "pm2 startOrReload ecosystem.config.js --env move",
+    "server:prod": "pm2 startOrReload ecosystem.config.js --env prod",
+    "server:stop": "pm2 stop ecosystem.config.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -125,7 +146,40 @@
   },
   "babel": {
     "presets": [
-      "react-app"
+      "react-app",
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "react-loadable/babel",
+      "@babel/plugin-transform-runtime",
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ],
+      [
+        "@babel/plugin-proposal-class-properties",
+        {
+          "loose": false
+        }
+      ]
     ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-standard": "^4.0.0",
+    "happypack": "^5.0.1",
+    "ignore-loader": "^0.1.2",
+    "node-sass": "^4.12.0",
+    "pm2": "^3.5.1",
+    "prettier": "^1.18.2"
   }
 }
