--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
+    "koa": "^2.7.0",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
@@ -59,8 +62,10 @@
     "ts-pnp": "1.1.2",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
+    "webpack-cli": "^3.3.6",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
+    "webpack-merge": "^4.2.1",
     "workbox-webpack-plugin": "4.2.0"
   },
   "scripts": {
@@ -168,6 +173,8 @@
     ]
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
+    "ejs-compiled-loader": "^1.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-standard": "^13.0.1",
     "eslint-plugin-import": "^2.16.0",
@@ -180,6 +187,8 @@
     "ignore-loader": "^0.1.2",
     "node-sass": "^4.12.0",
     "pm2": "^3.5.1",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack-node-externals": "^1.7.2"
   }
 }
