--- a/package.json
+++ b/package.json
@@ -70,11 +70,14 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "debug:dev": "cross-env REACT_APP_ENV=dev npm run start",
+    "debug:test": "cross-env REACT_APP_ENV=test npm run start",
+    "debug:move": "cross-env REACT_APP_ENV=move npm run start",
     "test": "node scripts/test.js",
-    "debug": "cross-env NODE_ENV=development nodemon ./server/app.js",
-    "debug:dev": "cross-env cross-env REACT_APP_ENV=dev npm run debug",
-    "debug:test": "cross-env cross-env REACT_APP_ENV=test npm run debug",
-    "debug:move": "cross-env cross-env REACT_APP_ENV=move npm run debug",
+    "debug:server": "cross-env NODE_ENV=development nodemon ./server/app.js",
+    "debug:server:dev": "cross-env cross-env REACT_APP_ENV=dev npm run debug:server",
+    "debug:server:test": "cross-env cross-env REACT_APP_ENV=test npm run debug:server",
+    "debug:server:move": "cross-env cross-env REACT_APP_ENV=move npm run debug:server",
     "clear": "rimraf build",
     "build:client": "cross-env NODE_ENV=production webpack --progress --hide-modules --config config/webpack.client.config.js",
     "build:server": "cross-env NODE_ENV=production webpack --progress --hide-modules --config config/webpack.server.config.js",
