--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "happypack": "^5.0.1",
     "ignore-loader": "^0.1.2",
+    "isomorphic-style-loader": "^5.1.0",
     "node-sass": "^4.12.0",
     "pm2": "^3.5.1",
     "prettier": "^1.18.2",
